feat: added my information (wip)

--- a/cv.tex
+++ b/cv.tex
@@ -2,35 +2,33 @@
 \usepackage{cv}
 \PassOptionsToPackage{hyphens}{url}
 \usepackage{hyperref}
-\addbibresource{bibliography.bib}
+%\addbibresource{bibliography.bib}
 
 %----------------------------------------------------------------------------------------
 %	PERSONAL DATA
 %----------------------------------------------------------------------------------------\\
 
-\name{Matteo Magnini}
-\phone{(+39) 334 38 32 814}
-\birthday{June 19, 1995} 
-\genre{Male}
+\name{Aqila Farahmand}
+\phone{(+39) 351 671 5137}
+\birthday{October 4, 1995}
+\genre{Female}
 \country{Italy}
 \town{47521, Cesena (FC)}
-\address{via dell'Università 50}
+%\address{via dell'Università 50}
 %\email{\href{mailto:matteo.magnini@studio.unibo.it}{\texttt{matteo.magnini@studio.unibo.it}}}
-\email{\href{mailto:matteo.magnini@unibo.it}{\texttt{matteo.magnini@unibo.it}}}
-\github{\href{https://github.com/MatteoMagnini}{github.com/MatteoMagnini}}
-\linkedin{\href{https://www.linkedin.com/in/matteo-magnini/}{linkedin.com/in/matteo-magnini}}
-\orcid{\href{https://orcid.org/0000-0001-9990-420X}{\texttt{0000-0001-9990-420X}}}
-\googlescholar{\href{https://scholar.google.com/citations?user=iJDPEaUAAAAJ\&hl=en}{\texttt{iJDPEaUAAAAJ}}}
-\photo{me.png}
+\email{\href{mailto:aqela.af@gmail.com}{\texttt{aqela.af@gmail.com}}}
+\github{\href{https://github.com/Aqila-Farahmand}{github.com/Aqila-Farahmand}}
+\linkedin{\href{https://www.linkedin.com/in/aqila-farahmand/}{linkedin.com/in/aqila-farahmand}}
+%\orcid{\href{https://orcid.org/0000-0001-9990-420X}{\texttt{0000-0001-9990-420X}}}
+%\googlescholar{\href{https://scholar.google.com/citations?user=iJDPEaUAAAAJ\&hl=en}{\texttt{iJDPEaUAAAAJ}}}
+\photo{aqila.jpg}
 
 \begin{document}
     
     \begin{rSection}{In short}
-        PhD Student in Computer Science and Engineering at the \href{https://disi.unibo.it/it}{Department of Computer Science and Engineering} (DISI), University of Bologna.
+        I recently earned my Master’s Degree in Computer Science from the University of Camerino, where I completed a research thesis at the University of Oslo.
         %
-        Main research activities comprehends the fields of Artificial Intelligence, Machine Learning, Logic and Neuro-Symbolic techniques.
-        %
-        
+        Currently, I am working as an intern with \href{https://www.sintef.no/}{SINTEF} on the \href{https://www.themis-trust.eu/}{THEMIS.5} project.
     \end{rSection}
     
     %----------------------------------------------------------------------------------------
@@ -44,35 +42,29 @@
         
         \begin{rSubsection2}{Education}
 
-            \item\textbf{ Ph.D. Student }\hfill \textbf{Nov., 2022 $\rightarrow$ Now}
-            \\Computer Science and Engineering, University of Bologna, Italy.
-            \\Studies in the field of Computer Science and AI, with particular attention to ML, formal logics, neural-symbolic methods, fairness approaches and the development of new technologies.
+            \item\textbf{ Master's degree }\hfill \textbf{Mar., 2022 $\rightarrow$ Oct., 2024}
+            \\Computer Science (Intelligent and Adoptive Systems), University of Camerino, Italy.
+            \\Studies in the field of programming paradigms, complex systems, distributed systems, machine learning, web applications, data mining.
+            \\106/110
             %
-            \item\textbf{ Master's degree }\hfill \textbf{Oct., 2018 $\rightarrow$ Mar., 2021}
-            \\Computer Science and Engineering, University of Bologna, Italy.
-            \\Studies in the field of programming paradigms, computational models, distributed systems, robotics, machine learning, artificial vision, web applications, business intelligence, data mining, big data.
-            \\110/110 \emph{cum laude}
+            \item\textbf{ Master's degree thesis }\hfill \textbf{Aug., 2023 $\rightarrow$ Jul., 2024}
+            \\Identification of Workflows and Files contributing to TD through Commit-Level Analysis across the GitHub Action
+            \\Relator: Prof. Flavio Corradini
+            \\Co-relator: Prof. Antonio Martini
+            \\We developed a model to mine data from GitHub Actions and employed an NLP model for automatic text classification.
+            Our model identifies files and workflows within GitHub Actions that are likely to introduce technical debt (TD) and visualizes them.
+            This represents a significant advancement in TD identification and mitigation during software development processes.
             %
-            \item\textbf{ Master's degree thesis }\hfill \textbf{Mar., 26, 2021}
-            \\An information theory analysis of critical Boolean networks as control software for robots
-            \\Relator: Prof. Andrea Roli
-            \\Identifying relationships between robots, controlled by critical random Boolean networks, successfully achieving the assigned task and defined information theory functions on sensors and actuators.
-            \\External site: \url{https://amslaurea.unibo.it/23062}
-            %
-            \item\textbf{ Bachelor's degree }\hfill \textbf{Sept., 2015 $\rightarrow$ Dec., 2018}
-            \\Computer Science and Engineering, University of Bologna, Italy.
-            \\Studies in the field of programming languages, operating systems, software engineering, algorithms, networking and web.
-            \\110/110 \emph{cum laude}
+            \item\textbf{ Bachelor of Technology }\hfill \textbf{Jul., 2016 $\rightarrow$ Jul., 2021}
+            \\Electronics and Communication Engineering, NIT Kurukshetra, India (standard duration for engineering programs is four years).
+            \\7.1/10
             %
             \item\textbf{ Bachelor's degree thesis }\hfill \textbf{Dec., 14, 2018}
-            \\Ottimizzazione Combinatorica mediante Deep Reinforcement Learning: Sperimentazione nella Logistica di Magazzino.
-            \\Relator: Prof. Gianluca Moro
-            \\Training and analysis of a neural network using Deep Reinforcement Learning to optimise the allocation of commodity in a warehouse with respect to picking frequency.
-            \\External site: \url{https://amslaurea.unibo.it/17000}
+            \\Implementation of Smart crates and IoT on the Fly Food Inventory Monitoring and Automatic Stock Renewal
+            \\Relator: Prof. Chhagan Charan
+            \\A novel system of intelligent food content monitoring has been developed, using intelligent sensing systems that continuously monitor perishable food levels while automatically placing orders for renewal of stock.
+            This system has significant implications for warehouses and wholesalers, as it facilitates the exchange of goods using smart crates equipped with internet-of-things sensing systems linked to a web application.
             %
-            \item\textbf{ High-school diploma }\hfill \textbf{2009 $\rightarrow$ 2014}
-            \\Scientific curriculum, Liceo Scientifico ``A. Righi'', Cesena (FC), Italy.
-            \\Final mark 100/100
         \end{rSubsection2}
 
         %----------------------------------------------------------------------------------------
@@ -129,67 +121,6 @@
 
     \end{rSection}
 
-    %\newpage
-
-    %----------------------------------------------------------------------------------------
-    %	PUBLICATIONS SECTION
-    %----------------------------------------------------------------------------------------
-
-    \begin{rSection}{Scientific Publications}
-
-        %----------------------------------------------------------------------------------------
-        %	BIBLIOMETRICS SECTION
-        %----------------------------------------------------------------------------------------
-
-        \begin{rNoListSubsection}{Bibliometrics}{}{}{}
-            \input{scholar}
-        \end{rNoListSubsection}
-
-        %----------------------------------------------------------------------------------------
-        %	JOURNAL PUBLICATIONS SECTION
-        %----------------------------------------------------------------------------------------
-
-        % Adjust spacing between bibliography items
-        \setlength\bibitemsep{.5\baselineskip} % Adjust the value to change spacing
-
-        \begin{rNoListSubsection}{Journal publications sorted by time}{}{}{}
-            \nocite{*}
-            \DeclareFieldFormat{labelnumberwidth}{#1}
-            \printbibliography[type=article,heading=none,omitnumbers=true]{}
-        \end{rNoListSubsection}
-
-        %----------------------------------------------------------------------------------------
-        %	CONFERENCE PUBLICATIONS SECTION
-        %----------------------------------------------------------------------------------------
-
-        \begin{rNoListSubsection}{Contributions in conference proceedings sorted by time}{}{}{}
-            \nocite{*}
-            \DeclareFieldFormat{labelnumberwidth}{#1}
-            \defbibfilter{conferences}{
-              type=inproceedings or
-              type=incollection
-            }
-            \printbibliography[filter=conferences,heading=none,omitnumbers=true]{}
-        \end{rNoListSubsection}
-
-        %----------------------------------------------------------------------------------------
-        %	OTHER PUBLICATIONS (BOOKS, PROCEEDINGS CHAPTERS, ETC.) SORTED BY TIME SECTION
-        %----------------------------------------------------------------------------------------
-
-%        \begin{rNoListSubsection}{Other publications sorted by time}{}{}{}
-%            \nocite{*}
-%            \DeclareFieldFormat{labelnumberwidth}{#1}
-%            \defbibfilter{other}{
-%              not type=inproceedings and
-%              not type=incollection and
-%              not type=article
-%            }
-%            \printbibliography[filter=other,heading=none,omitnumbers=true]{}
-%        \end{rNoListSubsection}
-
-    \end{rSection}
-
-    \newpage
 
     %----------------------------------------------------------------------------------------
     %	SCIENTIFIC ACTIVITIES SECTION
@@ -207,52 +138,7 @@
             The group includes professors Andrea Omicini, Mirko Viroli, Alessandro Ricci, and operates at the University of Bologna.
         \end{rSubsection2}
 
-        %----------------------------------------------------------------------------------------
-        %	ORGANIZATION OF INTERNATIONAL CONFERENCES SECTION
-        %----------------------------------------------------------------------------------------
 
-        \begin{rSubsection2}{Organization of International Conferences}
-            %
-            \item \href{https://dl2024.w.uib.no/organization/}{the 37th International Workshop on Description Logics (DL 2024)}
-            \\Local organization team member.
-            %
-        \end{rSubsection2}
-
-        %----------------------------------------------------------------------------------------
-        %	PARTICIPATION IN PC OF INTERNATIONAL CONFERENCES SECTION
-        %----------------------------------------------------------------------------------------
-
-        \begin{rSubsection2}{Participation in Program Committees\\ of International Conferences}
-            %
-            \item \href{https://extraamas.ehealth.hevs.ch/archive.html#organizations-2022}{the 4th International Workshop on EXplainable and TRAnsparent AI and Multi-Agent Systems: Fourth International Workshop (EXTRAAMAS 2022)}
-            %
-            \item \href{https://apice.unibo.it/xwiki/bin/view/Event/Aaai2023}{the 37th Annual AAAI Conference on Artificial Intelligence (AAAI 2023)}
-            %
-            \item \href{https://apice.unibo.it/xwiki/bin/view/Event/Prima2023}{the 5th International Workshop on EXplainable and TRAnsparent AI and Multi-Agent Systems: Fourth International Workshop (EXTRAAMAS 2023)}
-            %
-            \item \href{https://web.archive.org/web/20240225110652/https://www.stai.uk/stai-23-iclp}{the Safe and Trustworthy AI Workshop (STAI 2023)}
-            %
-            \item \href{https://fairnesscluster.github.io/aimmes23.github.io/index.html}{the 1st Workshop on AI bias: Measurements, Mitigation, Explanation Strategies (AIMMES 2024)}
-            %
-            \item \href{https://apice.unibo.it/xwiki/bin/view/Event/Aaai2024}{the 38th Annual AAAI Conference on Artificial Intelligence (AAAI 2024)}
-            %
-            \item \href{https://aequitas-aod.github.io/aequitas-ecai24.github.io/pc-member.html}{Second AEQUITAS on Fairness and Bias in AI (AEQUITAS 2024)}
-            %
-            \item \href{https://aaai.org/conference/aaai/aaai-25/}{the 39th Annual AAAI Conference on Artificial Intelligence (AAAI 2025)}
-        \end{rSubsection2}
-
-        %----------------------------------------------------------------------------------------
-        %	REVIEWING FOR INTERNATIONAL JOURNALS SECTION
-        %----------------------------------------------------------------------------------------
-
-        \begin{rSubsection2}{Reviewing for International Journals}
-            \item \href{https://link.springer.com/journal/10458}{Autonomous Agents and Multi-Agent Systems (ISSN: 1387-2532)}, 2023
-            %
-            \item \href{https://link.springer.com/journal/13042}{International Journal of Machine Learning and Cybernetics (ISSN: 1868-8071)}, 2024
-            %
-            \item \href{https://www.jair.org/index.php/jair/index}{Journal of Artificial Intelligence Research (ISSN: 1076-9757)}, 2024
-            %
-        \end{rSubsection2}
 
         %----------------------------------------------------------------------------------------
         %	TALKS IN INTERNATIONAL CONFERENCES SECTION
@@ -358,22 +244,6 @@
             %
         \end{rSubsection2}
 
-        %----------------------------------------------------------------------------------------
-        %	SUPERVISION OF GRADUATE STUDENTS SECTION
-        %----------------------------------------------------------------------------------------
-
-        \begin{rSubsection2}{Supervision of Graduate Students}
-
-            \item Riccardo Squarcialupi, Master's Degree, Department of Computer Science and Engineering, University of Bologna, Italy
-            \\ Actively Ontology Learning from Large Language Models, 2024.
-            %
-            \item Michelangelo Ungolo, Bachelor's Degree, School of Pure and Applied Sciences, University of Urbino, Italy
-            \\ Progettazione e sviluppo di un chatbot basato su LLM a supporto del paziente iperteso, 2024.
-            %
-            \item Giulia Costa, Bachelor's Degree, School of Pure and Applied Sciences, University of Urbino, Italy
-            \\ Intelligenza artificiale e salute: addestramento di un LLM per il supporto del paziente iperteso, 2024.
-
-        \end{rSubsection2}
 
         %----------------------------------------------------------------------------------------
         %	INTERNATIONAL EXPERIENCE SECTION
@@ -494,9 +364,8 @@
         \today
         \\
         \vspace{1em}
-        \Large$\mathcalligra{Matteo}$  $\mathcalligra{Magnini}$
-        
-        %\includegraphics[width=6cm]{./firma.pdf}
+        \Large$\mathcalligra{Aqila}$  $\mathcalligra{Farahmand}$
+
     \end{flushright}
     
 \end{document}
