feat: finalising all info

--- a/cv.tex
+++ b/cv.tex
@@ -71,34 +71,19 @@
         %	CERTIFICATIONS SECTION
         %----------------------------------------------------------------------------------------
 
-        \begin{rSubsection2}{Certifications}
-
-            \item\textbf{ State Exam }\hfill \textbf{June, 2021}
-            \\Industrial and Information Engineer, University of Bologna, Italy.
-            \\Qualification for the profession of engineer.
-
-        \end{rSubsection2}
-
         %----------------------------------------------------------------------------------------
         %	RESEACH CONTRACTS SECTION
         %----------------------------------------------------------------------------------------
 
-        \begin{rSubsection2}{Research Contracts}
-
-            \item\textbf{ Ph.D. Student }\hfill \textbf{Nov., 2022 $\rightarrow$ Now}
-            \\Computer Science and Engineering, University of Bologna, Italy.
-            \\Ph.D. course covered by the victory of a grant from the Italian Ministry of Research.
-            Initially worked within the \href{https://expectation.ehealth.hevs.ch/posts/home/}{Expectation} project, designing and developing neuro-symbolic methods and tools.
-            Then, I worked within the \href{https://www.aequitas-project.eu/}{Aequitas} project, focusing on fairness in AI and ML.
-            \\Supervisor: Prof. \href{mailto:andrea.omicini@unibo.it}{Andrea Omicini}
-            %
-            \item\textbf{ Research Fellow }\hfill \textbf{Oct., 2021 $\rightarrow$ Oct., 2022}
-            \\Department of Computer Science and Engineering (DISI), University of Bologna, Italy.
-            \\Project title: ``Strumenti di logica computazionale per estrazione e iniezione di conoscenza simbolica da e verso predittori subsimbolici''.
-            Goal: producing a software for the symbolic extraction/injection from/into sub-symbolic predictors.
-            \\Supervisor: Prof. \href{mailto:andrea.omicini@unibo.it}{Andrea Omicini}
-
-        \end{rSubsection2}
+%        \begin{rSubsection2}{Research Contracts}
+%
+%            \item\textbf{ Research Fellow }\hfill \textbf{Oct., 2021 $\rightarrow$ Oct., 2022}
+%            \\Department of Computer Science and Engineering (DISI), University of Bologna, Italy.
+%            \\Project title: ``Strumenti di logica computazionale per estrazione e iniezione di conoscenza simbolica da e verso predittori subsimbolici''.
+%            Goal: producing a software for the symbolic extraction/injection from/into sub-symbolic predictors.
+%            \\Supervisor: Prof. \href{mailto:andrea.omicini@unibo.it}{Andrea Omicini}
+%
+%        \end{rSubsection2}
 
         %----------------------------------------------------------------------------------------
         %	OTHER CONTRACTS SECTION
@@ -106,162 +91,57 @@
 
         \begin{rSubsection2}{Other Contracts}
 
-            \item\textbf{ ETL product specialist }\hfill \textbf{May, 2021 $\rightarrow$ Oct., 2021}
-            \\Healthcare division, Onit Group, Cesena, Italy.
-            \\Data-warehouse, database, web-services, customer care.
-            \\Reference: \href{mailto:czanella@onit.it}{Cecilia Zanella}
-            %
-            \item\textbf{ Internship }\hfill \textbf{Oct., 2017 $\rightarrow$ Jan., 2018}
-            \\LIAM Lab, Spilamberto (MO), Italy.
-            \\Study of OPCUA communication protocol.
-            \\Supervisor: Prof. \href{mailto:matteo.sartini@unibo.it}{Matteo Sartini}
+            \item\textbf{ Internship }\hfill \textbf{Dec, 2024}
+            \\Department: Mathematics and Cybernetics, Oslo, Norway.
+            \\Support the EU project THEMIS with detection of misinformation using natural language processing (NLP).
 
         \end{rSubsection2}
 
+        \begin{rSubsection}{Post Graduation Courses}
+
+            \item\textbf{ Internship }\hfill \textbf{Dec, 2024}
+            \\ Junior Cloud Specialist Course (Online)
+            \\ Generation Italy
+            \\ Course Info: \href{https://italy.generation.org/programs/cloud-specialist/}{Cloud Specialist Course}
+
+        \end{rSubsection}
 
     \end{rSection}
-
-
     %----------------------------------------------------------------------------------------
     %	SCIENTIFIC ACTIVITIES SECTION
     %----------------------------------------------------------------------------------------
 
     \begin{rSection}{Scientific Activities}
 
-        %----------------------------------------------------------------------------------------
-        %	PARTICIPATION IN RESEARCH GROUPS SECTION
-        %----------------------------------------------------------------------------------------
-
-        \begin{rSubsection2}{Participation in Research Groups}
-            \item\textbf{ APICe Research group }\hfill \textbf{Oct., 2021 $\rightarrow$ Now}
-            \\The primary research group I worked with since the conclusion of my two years master.
-            The group includes professors Andrea Omicini, Mirko Viroli, Alessandro Ricci, and operates at the University of Bologna.
-        \end{rSubsection2}
-
-
-
-        %----------------------------------------------------------------------------------------
-        %	TALKS IN INTERNATIONAL CONFERENCES SECTION
-        %----------------------------------------------------------------------------------------
-
-        \begin{rSubsection2}{Talks in International Conferences}
-            \item 37th Italian Conference on Computational Logic (CILC 2022)
-            \\\href{https://apice.unibo.it/xwiki/bin/view/Talk/KinsCilc2022}{KINS: Knowledge Injection via Network Structuring}
-            %
-            \item 24th International Conference on Principles and Practice of Multi-Agent Systems (PRIMA 2022)
-            \\\href{https://apice.unibo.it/xwiki/bin/view/Talk/PsykitutorialPrima2022}{Symbolic Knowledge Injection via PSyKI. A Tutorial} (material preparation)
-            \\\href{https://apice.unibo.it/xwiki/bin/view/Talk/PsykiPrima2022}{Symbolic Knowledge Extraction via PSyKE. A Tutorial} (material preparation)
-            %
-            \item 21st International Conference of the Italian Association for Artificial Intelligence (AIXIA 2022)
-            \\\href{https://apice.unibo.it/xwiki/bin/view/Talk/CtlAixia2022}{Bridging Symbolic and Sub-Symbolic AI: Towards Cooperative Transfer Learning in Multi-Agent Systems}
-            %
-            \item Doctoral Consortium of the 20th International Conference on Principles of Knowledge Representation and Reasoning (KR 2023)
-            \\\href{https://apice.unibo.it/xwiki/bin/view/Talk/SymbolicTransferLearning}{Symbolic Transfer Learning through Knowledge Manipulation Methods}
-        \end{rSubsection2}
-
-        \begin{rSubsection2}{Other Talks}
-            \item 4rd International Workshop on EXplainable and TRAnsparent AI and Multi-Agent Systems (EXTRAAMAS 2022)
-            \\\href{https://apice.unibo.it/xwiki/bin/view/Talk/PsykiExtraamas2022}{On the Design of PSyKI: a Platform for Symbolic Knowledge Injection into Sub-Symbolic Predictors}
-            %
-            \item 23rd Workshop ``From Objects to Agents'' (WOA 2022)
-            \\\href{https://apice.unibo.it/xwiki/bin/view/Talk/KillWoa2022}{A view to a KILL: Knowledge Injection via Lambda Layer}
-            %
-            \item Advanced School in Artificial intelligence in Emilia Romagna 2023 (ASAI 2023)
-            \\\href{https://apice.unibo.it/xwiki/bin/view/Talk/XaiAsaiErBertinoro2023}{eXplainable Artificial Intelligence (XAI): A Gentle Introduction}
-            %
-            \item 1st Workshop on AI bias: Measurements, Mitigation, Explanation Strategies (AIMMES 2024)
-            \\\href{https://apice.unibo.it/xwiki/bin/view/Talk/IntersectionalityAimmes2024}{Mitigating Intersectional Fairness: a Practical Approach with FaUCI}
-            %
-            \item 37th International Workshop on Description Logics (DL 2024)
-            \\\href{https://dl2024.w.uib.no/overview/}{Active Learning Ontologies from LLMS: first results}
-            %
-            \item Second AEQUITAS Workshop on Fairness and Bias in AI | co-located with ECAI 2024 (AEQUITAS 2024)
-            \\\href{https://apice.unibo.it/xwiki/bin/view/Talk/FauciAequitas2024}{Enforcing Fairness via Constraint Injection with FaUCI}
-        \end{rSubsection2}
-
-    \end{rSection}
-
-    %\newpage
-
     %----------------------------------------------------------------------------------------
     %	TEACHING SECTION
     %----------------------------------------------------------------------------------------
+        \begin{rSubsection2}{Teaching Activity}
 
-    \begin{rSection}{Teaching}
+            \item\textbf{ Teaching for the course JavaScript }\hfill \textbf{Jul, 2022 $->$ Sep, 2022}
+            \\ CodeWeekend (Online)
+            \\ Delivered online JavaScript coding lessons as part of a bootcamp organized by CodeWeekend for aspiring developers.
+            \\ More about CodeWeekend:\href{https://codeweekend.net/}
 
-        %----------------------------------------------------------------------------------------
-        %	TUTORING SECTION
-        %----------------------------------------------------------------------------------------
-
-        \begin{rSubsection2}{Tutoring}
-            \item\textbf{Teaching assistant for the course ``Distributed Systems'' }\hfill \textbf{Sept., 2024 $\rightarrow$ Now}
-            \\School of Engineering and Architecture (24 hours), University of Bologna, Italy
-            \\Asynchronous programming, distributed principles and architectures, consensus algorithms, ReSTfull web-services, containers, agent-based technologies and middlewares.
-            \\Supervisor: Prof. \href{mailto:andrea.omicini@unibo.it}{Andrea Omicini}
-            \\Course Info: \url{https://apice.unibo.it/xwiki/bin/view/Courses/Ds2425}
-            %
-            \item\textbf{ Teaching assistant for the course ``Distributed Systems'' }\hfill \textbf{Sept., 2023 $\rightarrow$ Jan., 2024}
-            \\School of Engineering and Architecture (24 hours), University of Bologna, Italy
-            \\Asynchronous programming, distributed principles and architectures, consensus algorithms, ReSTfull web-services, containers, agent-based technologies and middlewares.
-            \\Supervisor: Prof. \href{mailto:andrea.omicini@unibo.it}{Andrea Omicini}
-            \\Course Info: \url{https://apice.unibo.it/xwiki/bin/view/Courses/Ds2324}
-            %
-            \item\textbf{ Teaching assistant for the course ``Fondamenti di Informatica'' }\hfill \textbf{Feb., 2023 $\rightarrow$ June, 2023}
-            \\School of Engineering and Architecture (35 hours), University of Bologna, Italy
-            \\Computer architecture, representation of information, algorithms and data structures, C programming language.
-            \\Supervisor: Dr. \href{mailto:roberto.casadei@unibo.it}{Roberto Casadei}
-            \\Course Info: \url{https://apice.unibo.it/xwiki/bin/view/Courses/Finf2223/}
-            %
-            \item\textbf{ Teaching assistant for the course ``Sistemi Distribuiti'' }\hfill \textbf{Sept., 2022 $\rightarrow$ Jan., 2023}
-            \\School of Engineering and Architecture (24 hours), University of Bologna, Italy
-            \\Asynchronous programming, distributed principles and architectures, consensus algorithms, ReSTfull web-services, containers, agent-based technologies and middlewares.
-            \\Supervisor: Prof. \href{mailto:andrea.omicini@unibo.it}{Andrea Omicini}
-            \\Course Info: \url{https://apice.unibo.it/xwiki/bin/view/Courses/Sd2223}
-            %
-            \item\textbf{ Teaching assistant for the course ``Fondamenti di Informatica'' }\hfill \textbf{Feb., 2022 $\rightarrow$ June, 2022}
-            \\School of Engineering and Architecture (35 hours), University of Bologna, Italy
-            \\Computer architecture, representation of information, algorithms and data structures, C programming language.
-            \\Supervisor: Dr. \href{mailto:roberto.casadei@unibo.it}{Roberto Casadei}
-            \\Course Info: \url{https://apice.unibo.it/xwiki/bin/view/Courses/FINF2022}
-            %
         \end{rSubsection2}
 
         %----------------------------------------------------------------------------------------
         %	EXTRA-INSTITUTIONAL TEACHING SECTION
         %----------------------------------------------------------------------------------------
 
-        \begin{rSubsection2}{Extra-institutional Teaching}
-            %
-            \item\textbf{ Teacher at professional education course }\hfill \textbf{May 5, 2023},
-            \\BPER -- Data Analytics (8 hours), \href{https://www.bbs.unibo.eu/}{BBS}
-            \\Talks topics: eXplainable Artificial Intelligence (XAI): A Gentle Introduction.
-            \\References:  Prof. \href{mailto:andrea.omicini@unibo.it}{Andrea Omicini}
-            %
-            \item\textbf{ Teacher at professional education course }\hfill \textbf{May 17-19, 2022}
-            \\IFTS course (6 hours), \href{http://www.formart.it/home}{FORMart}
-            \\Talks topics: Business Intelligence and Big Data.
-            \\References:  Prof. \href{mailto:a.ricci@unibo.it}{Alessandro Ricci}
-            %
-        \end{rSubsection2}
-
-
         %----------------------------------------------------------------------------------------
         %	INTERNATIONAL EXPERIENCE SECTION
         %----------------------------------------------------------------------------------------
-
         \begin{rSubsection2}{International Experience}
 
-            \item\textbf{ Visiting Researcher }\hfill \textbf{Mar., 2024 $\rightarrow$ Jun., 2024}
+            \item\textbf{ Visiting Researcher Student (Master's Thesis)}\hfill \textbf{Aug, 2023 $\rightarrow$ Jul, 2024}
             \\Department of Informatics, University of Oslo, Norway
-            \\Design and development of the exact learner framework by using LLMs as teacher.
-            \\Supervisor: Prof. \href{mailto:anaoz@ifi.uio.no}{Ana Ozaki}
+            \\Identification of Workflows and Files contributing to TD through Commit-Level Analysis across the GitHub Action
+            \\Supervisor: Prof. \href{mailto:antonima@ifi.uio.no}{Antonio Martini}
 
         \end{rSubsection2}
 
     \end{rSection}
-
-    \newpage
-
     %----------------------------------------------------------------------------------------
     %	OTHER ACTIVITIES AND SKILLS SECTION
     %----------------------------------------------------------------------------------------
@@ -272,40 +152,27 @@
         %	FACULTY ACTIVITY SECTION
         %----------------------------------------------------------------------------------------
 
-        \begin{rSubsection2}{Faculty Activity}
-            %
-            \item\textbf{ Tutor DM }\hfill \textbf{Feb., 2021 $\rightarrow$ Mar. 2021}
-            \\Educational services sector, University of Bologna, Italy
-            \\Technical support for mixed teaching and lessons supervision for Covid-19 prevention.
-            %
-            \item\textbf{ Master's Degree students Representative in Course Council }\hfill \textbf{Jul., 2019 $\rightarrow$ Mar., 2021}
-            \\Computer Science and Engineering, University of Bologna, Italy
-            \\\url{https://corsi.unibo.it/magistrale/IngegneriaScienzeInformatiche/coordinatore-consiglio}
-            %
-            \item\textbf{ Master's Degree students Representative in AQ Council }\hfill \textbf{Jul., 2019 $\rightarrow$ Mar., 2021}
-            \\Computer Science and Engineering, University of Bologna, Italy
-            \\\url{https://corsi.unibo.it/magistrale/IngegneriaScienzeInformatiche/commissioni}
-            %
-        \end{rSubsection2}
-
         %----------------------------------------------------------------------------------------
         %	SOFTWARE DEVELOPMENT
         %----------------------------------------------------------------------------------------
 
-        \begin{rSubsection2}{Lead Designer of Research-related Software}
-            %
-            \item\textbf{ PSyKE }\hfill \textbf{Nov., 2021 $\rightarrow$ Ongoing}
-            \\a (python) platform for symbolic knowledge extraction from sub-symbolic predictors.
-            \\\url{https://github.com/psykei/psyke-python}
-            %
-            \item\textbf{ PSyKI }\hfill \textbf{Apr., 2022 $\rightarrow$ Ongoing}
-            \\a (python) platform for symbolic knowledge injection into sub-symbolic predictors.
-            \\\url{https://github.com/psykei/psyki-python}
-            %
-            \item\textbf{ Hyper-tension bot }\hfill \textbf{Jan., 2024 $\rightarrow$ Ongoing}
-            \\Telegram hyper-tension bot for monitoring patients' blood pressure and providing general help.
-            \\\url{https://github.com/MatteoMagnini/hyperTensionBot}
-        \end{rSubsection2}
+        %----------------------------------------------------------------------------------------
+        %	TECHNICAL STRENGTHS SECTION
+        %----------------------------------------------------------------------------------------
+        % \newpage
+        \begin{rNoListSubsection}{Technical Strengths}{}{}{}
+            \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
+                Programming Paradigms	& imperative, object oriented, functional, logic\\
+                Software configuration 	& Windows and Linux installation and configuration\\
+                Programming Languages 	& Python, Java, C, C++, Prolog, JavaScript\\
+                Data Analysis Tools		& Pandas, NumPy, Scikitlearn, Tensorflow, Pytorch\\
+                Networking 				& Socket (TCP \& UDP), HTTP, RESTful API \\
+                Databases 				& SQL, MySQL, MongoDB \\
+                Development tools 		& Git, Docker, Continuous Integration \\
+                Markup languages 		& Markdown, \LaTeX, HTML\\
+                IDEs 					& PyCharm, Visual Studio, Eclipse
+            \end{tabular}
+        \end{rNoListSubsection}
 
         %----------------------------------------------------------------------------------------
         %	LANGUAGE SECTION
@@ -316,43 +183,26 @@
                 \begin{tabular}{|c|c|c|c|c|c|}
                     \hline
                     &\textbf{Listening}&\textbf{Reading}&\textbf{Interaction}&\textbf{Speaking}&\textbf{Writing}\\\hline
-                    \textbf{Italian}&\multicolumn{5}{c}{Native language}\vline\\\hline
+                    \textbf{Persian}&\multicolumn{5}{c}{Native language}\vline\\\hline
                     \textbf{English}&C1&C1&C1&C1&C1\\\hline
-                    \textbf{French}&B2&B2&B1&B1&B1\\\hline
+                    \textbf{Italian}&B1&B1&B1&B1&B1\\\hline
                     \textbf{Norwegian}&A1&A1&A1&A1&A1\\\hline
                 \end{tabular}
             \end{center}
         \end{rNoListSubsection}
 
         %----------------------------------------------------------------------------------------
-        %	TECHNICAL STRENGTHS SECTION
-        %----------------------------------------------------------------------------------------
-        % \newpage
-        \begin{rNoListSubsection}{Technical Strengths}{}{}{}
-            \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-                Programming Paradigms	& imperative, object oriented, functional, logic\\
-                Software configuration 	& Windows and Linux installation and configuration\\
-                Programming Languages 	& Python, Java, Scala, C, C++, C\#, Prolog, JavaScript\\
-                Data Analysis Tools		& R, Pandas, NumPy, Scikitlearn, Tensorflow, Pytorch\\
-                Networking 				& Socket (TCP \& UDP), HTTP, RESTful WebAPI \\
-                Databases 				& SQL, MySQL, MongoDB, Vertica \\
-                Development tools 		& Git, Maven, Gradle, Docker, Continuous Integration \\
-                Markup languages 		& Markdown, \LaTeX, HTML\\
-                IDEs 					& PyCharm, IntelliJ Idea, Visual Studio, Eclipse
-            \end{tabular}
-        \end{rNoListSubsection}
-
-        %----------------------------------------------------------------------------------------
         %	ADDITIONAL INFO SECTION
         %----------------------------------------------------------------------------------------
 
-        %\begin{rSubsection2}{Additional information}
-            %
-            %\item \textbf{About me}: I am an engineer and software developer with experience in machine learning and data mining. I can both work in team or alone. I always prefer deep analysis and discussion on the problem along with wide research in literature before solving it.
-            %
-            %\item \textbf{Interests}: Artificial Intelligence, Machine Learning, Logic, Data Mining, Artificial Vision, Robotics (swarm robotics and adaptation).
-            %
-        %\end{rSubsection2}
+        \begin{rSubsection2}{ Volunteering }
+
+            \item\textbf{ Treffpunkt program }\hfill \textbf{Nov, 2023 $->$ Jul, 2024}
+            \\ Red Cross, Oslo, Norway
+            \\ I worked as a volunteer for the Red Cross Youth programme (Treffpunkt), which is an inclusion activity for youth.
+             it aims to provide a platform for young people to connect and build relationships.
+
+        \end{rSubsection2}
 
     \end{rSection}
     
