fix: subsection2 instead of subsection

--- a/cv.tex
+++ b/cv.tex
@@ -97,14 +97,14 @@
 
         \end{rSubsection2}
 
-        \begin{rSubsection}{Post Graduation Courses}
+        \begin{rSubsection2}{Post Graduation Courses}
 
             \item\textbf{ Internship }\hfill \textbf{Dec, 2024}
             \\ Junior Cloud Specialist Course (Online)
             \\ Generation Italy
             \\ Course Info: \href{https://italy.generation.org/programs/cloud-specialist/}{Cloud Specialist Course}
 
-        \end{rSubsection}
+        \end{rSubsection2}
 
     \end{rSection}
     %----------------------------------------------------------------------------------------
